[gd_scene load_steps=25 format=2]

[ext_resource path="res://Assets/Character/Player/Player-Sheet.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Characters/Player/Player.gd" type="Script" id=2]
[ext_resource path="res://Scenes/Characters/Player/PlayerStates.gd" type="Script" id=3]
[ext_resource path="res://icon.png" type="Texture" id=4]
[ext_resource path="res://Assets/UI/ThoughtBubble.png" type="Texture" id=5]
[ext_resource path="res://Assets/Fonts/Glassibox16.tres" type="DynamicFont" id=6]
[ext_resource path="res://Scenes/Characters/Player/Camera2D.gd" type="Script" id=7]

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 1 )
region = Rect2( 0, 96, 48, 48 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 1 )
region = Rect2( 48, 96, 48, 48 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 1 )
region = Rect2( 96, 96, 48, 48 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 1 )
region = Rect2( 48, 192, 48, 48 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 1 )
region = Rect2( 96, 192, 48, 48 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 1 )
region = Rect2( 0, 48, 48, 48 )

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 1 )
region = Rect2( 48, 48, 48, 48 )

[sub_resource type="AtlasTexture" id=31]
atlas = ExtResource( 1 )
region = Rect2( 96, 48, 48, 48 )

[sub_resource type="AtlasTexture" id=32]
atlas = ExtResource( 1 )
region = Rect2( 144, 48, 48, 48 )

[sub_resource type="AtlasTexture" id=33]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=34]
atlas = ExtResource( 1 )
region = Rect2( 48, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=35]
atlas = ExtResource( 1 )
region = Rect2( 96, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=36]
atlas = ExtResource( 1 )
region = Rect2( 0, 144, 48, 48 )

[sub_resource type="AtlasTexture" id=37]
atlas = ExtResource( 1 )
region = Rect2( 48, 144, 48, 48 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ SubResource( 23 ), SubResource( 24 ), SubResource( 25 ) ],
"loop": false,
"name": "jump",
"speed": 5.0
}, {
"frames": [ SubResource( 27 ), SubResource( 28 ) ],
"loop": false,
"name": "attack",
"speed": 5.0
}, {
"frames": [ SubResource( 29 ), SubResource( 30 ), SubResource( 31 ), SubResource( 32 ) ],
"loop": true,
"name": "walk",
"speed": 5.0
}, {
"frames": [ SubResource( 33 ), SubResource( 34 ), SubResource( 35 ) ],
"loop": true,
"name": "idle",
"speed": 3.0
}, {
"frames": [ SubResource( 36 ), SubResource( 37 ) ],
"loop": true,
"name": "fall",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 4.5, 19 )

[sub_resource type="RectangleShape2D" id=22]

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="PlayerStates" type="Node" parent="."]
script = ExtResource( 3 )

[node name="Flip" type="Node2D" parent="."]

[node name="AnimatedSprite" type="AnimatedSprite" parent="Flip"]
position = Vector2( 0, -24 )
frames = SubResource( 5 )
animation = "idle"
frame = 2

[node name="ToolPos" type="Position2D" parent="Flip/AnimatedSprite"]

[node name="ToolSprite" type="Sprite" parent="Flip/AnimatedSprite/ToolPos"]
scale = Vector2( 0.05, 0.172 )
texture = ExtResource( 4 )
offset = Vector2( 0, -32 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.5, -19 )
shape = SubResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
offset = Vector2( 0, -32 )
current = true
zoom = Vector2( 0.8, 0.8 )
smoothing_enabled = true
drag_margin_left = 0.1
drag_margin_top = 1.0
drag_margin_right = 0.1
drag_margin_bottom = 0.3
editor_draw_drag_margin = true
script = ExtResource( 7 )

[node name="Tween" type="Tween" parent="Camera2D"]

[node name="CoyoteTimer" type="Timer" parent="."]
one_shot = true

[node name="JumpBufferTimer" type="Timer" parent="."]
one_shot = true

[node name="Interact" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Interact"]
position = Vector2( 16.8332, -12.3327 )
shape = SubResource( 22 )

[node name="StateLabel" type="Label" parent="."]
visible = false
margin_left = -20.0
margin_top = -60.0
margin_right = 20.0
margin_bottom = -46.0
size_flags_horizontal = 4
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StepSFX" type="AudioStreamPlayer" parent="."]
bus = "SFX"

[node name="LandSFX" type="AudioStreamPlayer" parent="."]
bus = "SFX"

[node name="JumpSFX" type="AudioStreamPlayer" parent="."]
bus = "SFX"

[node name="AttackSFX" type="AudioStreamPlayer" parent="."]
bus = "SFX"

[node name="Thought" type="Label" parent="."]
margin_top = -60.0
margin_right = 1.0
margin_bottom = -50.0
size_flags_horizontal = 2
size_flags_vertical = 2
custom_fonts/font = ExtResource( 6 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ThoughtBubble" type="NinePatchRect" parent="Thought"]
visible = false
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 5 )
patch_margin_left = 1
patch_margin_top = 1
patch_margin_right = 1
patch_margin_bottom = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="Thought"]

[connection signal="animation_finished" from="Flip/AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
